0.07
 - Add EXAMPLE4 to doc.
 - Add get_line_by_id() and get_line_by_name() methods to doc.
 - Add tests for get_line_by_id() and get_line_by_name() methods.
 - Improve description for get_lines() in doc.
 - Update to Map::Tube 3.03.

0.06 2015-10-02T13:17:33+02:00
 - Add tests for get_node_by_id() and get_node_by_name() methods.
 - Fix Test::Map::Tube and planning of tests.
 - Move author tests to xt/ directory.
 - Rewrite SEE ALSO section to new style.
 - Update Module::Install to 1.16 version.

0.05 2015-03-06T09:01:05+01:00
 - Fix test dependencies.

0.04 2015-03-05T16:37:24+01:00
 - Add <?xml> header to XML document.
 - Add 04-map.t test.
 - Add Map::Tube::Singapore to SEE ALSO section in doc.
 - Add lines to XML document.
 - Move comment in xml file to top.

0.03 2015-01-20T07:34:18+01:00
 - Add Map::Tube::Budapest to SEE ALSO section in doc.
 - Add Map::Tube::Graph to SEE ALSO section in doc.
 - Add Map::Tube::Nanjing to SEE ALSO section in doc.
 - Add Map::Tube::Plugin::Graph to SEE ALSO section in doc.
 - Add Task::Map::Tube to SEE ALSO section in doc.
 - Fix XML map (duplicite links).
 - Update copyright years to 2015.

0.02 2014-12-26T18:50:38+01:00
 - Add EXAMPLE3 section to doc.
 - Add Map::Tube::GraphViz, Map::Tube::Text::Table,
   Map::Tube::Dnipropetrovsk, Map::Tube::Kazan, Map::Tube::Novosibirsk,
   Map::Tube::Prague, Map::Tube::SaintPetersburg, Map::Tube::Tbilisi,
   Map::Tube::Vienna and Map::Tube::Yekaterinburg> to SEE ALSO section in
   doc.
 - Add get_lines() method to doc.
 - Add get_stations() method to doc.
 - Remove executable bit from bucharest-map.xml file.

0.01 2014-12-10T01:21:14+01:00
 - First version