@@ -2,6 +2,7 @@
  - Add EXAMPLE4 to doc.
  - Add get_line_by_id() and get_line_by_name() methods to doc.
  - Add tests for get_line_by_id() and get_line_by_name() methods.
+ - Add test for get_lines() method.
  - Improve description for get_lines() in doc.
  - Update to Map::Tube 3.03.
 
